# hackasat-qualifier-2023

./: LICENSE  README.md  tickets.csv
challenges/0_The_Kitchen/0_The_Freezer/: .gitignore  Makefile  README.md
challenges/0_The_Kitchen/1_The_Microwave/: Makefile  README.md
challenges/0_The_Kitchen/2_The_Stove/: Makefile  README.md
challenges/1_Aerocapture_The_Flag/0_GGs/: .gitignore  Makefile  README.md
challenges/1_Aerocapture_The_Flag/1_Find_Your_Center/: .gitignore  Makefile  readme.md
challenges/1_Aerocapture_The_Flag/2_Teraforming_Mars/: .gitignore  Makefile  README.md
challenges/1_Aerocapture_The_Flag/3_TLE/: Makefile  README.md
challenges/2_Cant_Stop_The_Signal_Mal/0_QAM/: .gitignore  Makefile  README.md
challenges/2_Cant_Stop_The_Signal_Mal/1_Dashing/: .gitignore  Makefile  README.md
challenges/2_Cant_Stop_The_Signal_Mal/1_Dashing/solver/morse-audio-decoder/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
challenges/2_Cant_Stop_The_Signal_Mal/1_Dashing/solver/morse-audio-decoder/morse_audio_decoder/: __init__.py  __main__.py  io.py  morse.ini  morse.py  processing.py
challenges/2_Cant_Stop_The_Signal_Mal/1_Dashing/solver/morse-audio-decoder/tests/: common_fixtures.py  test_io.py  test_morse.py  test_morse_audio_decoder.py  test_processing.py
challenges/2_Cant_Stop_The_Signal_Mal/2_Fauxy_Lady/: .gitignore  Makefile  README.md
challenges/2_Cant_Stop_The_Signal_Mal/3_Dark_Side_of_the_Dishy/: .gitignore  Makefile  README.md
challenges/3_Pure_Pwnage/0_RISC-V-Smash-Baby/: .gitattributes  Makefile  README.md
challenges/3_Pure_Pwnage/4_Spectrel_Imaging/static/: CMakeLists.txt  Dockerfile  Makefile  basicSpectre.cpp  exampleCmds.txt  flag.txt  globals.hpp  main.cpp  main2.cpp  readme.md  scheduler.cpp  scheduler.hpp  stars.csv
challenges/3_Pure_Pwnage/5_Kalman_At_Me_Bro/static/: CMakeLists.txt  Dockerfile  Dockerfile_Public  KalmanFilter.hpp  LinkedList.hpp  PosFilter.cpp  PosFilter.hpp  buildme.sh  data.py  main.cpp  shared.py  user.cpp  user.hpp
challenges/base_challenge/: build.sh
challenges/base_challenge/pyctf_base/pyctf/: Dockerfile  build.sh  entry.sh  pyproject.toml  setup.py
challenges/base_challenge/pyctf_base/pyctf/ctf/: challenge.py  io.py  timeout.py
team_writeups/: 1064CBread.md  ADDVulcan.md  DiceGang.md  If this doesn't work we will get more for next year.md  Krautsat.md  More Smoked Leet Chicken.md  OneSmallHackForMan.md  PPP.md  Poland Can Into Space.md  SingleEventUpset.md  Solar Wine.md  SpaceBitsRUs.md  Tea MSG.md  WeltALLES!.md  jmp fs_ [rcx].md  mhackeroni.md  organizers.md  perfect blue.md  r3kapig.md  scriptohio.md
(+331 files in other folders)
